# standalones

./: .gitignore  CMakeLists.txt  README.md
cloud-microphys-sa/: CMakeLists.txt  README.md
cloud-microphys-sa/src/: main.F90  serial_driver_cpu.F90  serial_driver_gpu.F90
cmake/compiler/flags/: GNU_Fortran.cmake  NVHPC_Fortran.cmake
microphys-sa/: CMakeLists.txt
tp-core-driver/: CMakeLists.txt
tp-core-driver/src/: tp_core.F90
tp-core-sa/: CMakeLists.txt  README.md
